Replace twitter logo with x

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -142,12 +142,12 @@ const social_icon = "/Images/mockuphone-logo.png";
               />
             </a>
             <a
-              href="https://twitter.com/intent/tweet?utm_source=twitter_web_centreButton&utm_medium=twitter&utm_campaign=twitter_web_centreButton&url=https://mockuphone.com/&via=oursky&text=One click to wrap your app screenshots in device mockup!"
+              href="https://x.com/intent/tweet?utm_source=twitter_web_centreButton&utm_medium=twitter&utm_campaign=twitter_web_centreButton&url=https://mockuphone.com/&via=oursky&text=One click to wrap your app screenshots in device mockup!"
             >
               <Image
                 class="header__share-twitter"
-                src="/Images/twitter-icon-black.svg"
-                alt="twitter-icon-black.svg"
+                src="/Images/x-icon-black.svg"
+                alt="x-icon-black.svg"
                 format="svg"
                 width={16}
                 height={16}
