--- a/src/pages/download.astro
+++ b/src/pages/download.astro
@@ -80,9 +80,9 @@ import ErrorPage from "../components/ErrorPage.astro";
         </li>
         <li class="share-social-item">
           <a
-            href="https://twitter.com/intent/tweet?utm_source=twitter_web_centreButton&utm_medium=twitter&utm_campaign=twitter_web_centreButton&url=https://mockuphone.com/&via=oursky&text=One click to wrap your app screenshots in device mockup!"
+            href="https://x.com/intent/tweet?utm_source=twitter_web_centreButton&utm_medium=twitter&utm_campaign=twitter_web_centreButton&url=https://mockuphone.com/&via=oursky&text=One click to wrap your app screenshots in device mockup!"
           >
-            <img src="/Images/twitter-icon-blue.svg" />
+            <img src="/Images/x-icon-circle.svg" />
           </a>
         </li>
       </ul>
