--- a/src/styles/device.css
+++ b/src/styles/device.css
@@ -495,7 +495,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 335px;
+  width: 100%;
   height: 295px;
   background: var(--white);
   border: 1px solid var(--gray-5);
@@ -505,7 +505,7 @@
 }
 @media (min-width: 992px) {
   .request-device-section {
-    width: 295px;
+    width: 100%;
     height: 295px;
   }
 }
