--- a/src/styles/upload.css
+++ b/src/styles/upload.css
@@ -417,8 +417,7 @@ main {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin: 20px auto 0 auto;
-  width: 335px;
+  margin: 20px 20px 0 20px;
   height: 295px;
   background: var(--white);
   border: 1px solid var(--gray-5);
