Render file list item as card

--- a/src/styles/upload.css
+++ b/src/styles/upload.css
@@ -206,7 +206,7 @@ main {
 
 .file-list {
   list-style: none;
-  margin: 0;
+  margin-top: 20px;
   padding: 0;
 }
 
@@ -219,36 +219,39 @@ main {
 }
 
 .file-list-item {
-  margin: 15px 0 0 0;
+  margin: 8px 0 0 0;
+  border: 1px solid var(--gray-5);
+  border-radius: 10px;
+  padding: 12px;
+  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.06);
 }
 
 .file-list-item__filename {
-  position: relative;
+  display: flex;
+  align-items: center;
   overflow: hidden;
-  padding: 0 20px 0 0;
   text-overflow: ellipsis;
+  font-size: 14px;
+  line-height: 21px;
 }
 
-.file-list-item .file-list-item__filename::after {
+.file-list-item .file-list-item__filename::before {
   content: "";
-  position: absolute;
-  top: 2px;
-  right: 0;
   display: block;
   width: 20px;
   height: 20px;
-  margin: 0 0 0 auto;
+  margin: 0 8px 0 0;
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
 }
-.file-list-item--done .file-list-item__filename::after {
+.file-list-item--done .file-list-item__filename::before {
   background-image: url("/Images/upload-done.svg");
 }
-.file-list-item--warning .file-list-item__filename::after {
+.file-list-item--warning .file-list-item__filename::before {
   background-image: url("/Images/upload-warning.svg");
 }
-.file-list-item--error .file-list-item__filename::after {
+.file-list-item--error .file-list-item__filename::before {
   background-image: url("/Images/upload-error.svg");
 }
 
