--- a/src/pages/device/[device].astro
+++ b/src/pages/device/[device].astro
@@ -91,17 +91,19 @@ const deviceDatail: Device = DEVICE_MANAGER.getDeviceById(targetDevice);
             alt={deviceDatail.imagePath?.[0][1]}
           />
         </div>
-        <div class="upload__background"></div>
+        <!-- FIXME: confirm if need uploading with webassembly or not -->
+        <input type="hidden" name="phone" value={deviceDatail.device_id} />
+      </div>
+    </div>
+
+    <div class="mockup-lg-right">
+      <section class="file-uploaded">
+        <h3 class="file-uploaded__heading">FILE UPLOAD</h3>
         <div class="upload-guide">
-          <img src="/Images/upload.svg" />
-          <h3 class="upload-guide__title">Upload your image here</h3>
-          <p class="upload-guide__hint">
-            Recommend size {deviceDatail.display_resolution?.[0]}px * {
-              deviceDatail.display_resolution?.[1]
-            }px, We support jpg, png and psd
-          </p>
+          <img src="/Images/upload-blue.svg" />
+          <h3 class="upload-guide__title">Upload your images here</h3>
           <label class="upload-guide__browse-btn" for="file[]"
-            >Browse Files</label
+            >Or browse files</label
           >
           <input
             class="upload-guide__file-input"
@@ -112,17 +114,11 @@ const deviceDatail: Device = DEVICE_MANAGER.getDeviceById(targetDevice);
             multiple
           />
         </div>
-        <div class="uploading d-none">
-          <div class="uploading__spinner"></div>
-          <h3 class="uploading__text">Uploading...</h3>
-        </div>
-        <input type="hidden" name="phone" value={deviceDatail.device_id} />
-      </div>
-    </div>
-
-    <div class="mockup-lg-right">
-      <section class="file-uploaded d-none">
-        <h3 class="file-uploaded__heading">FILE UPLOADED</h3>
+        <p class="upload-guide__hint">
+          Recommend size {deviceDatail.display_resolution?.[0]}px * {
+            deviceDatail.display_resolution?.[1]
+          }px, We support jpg, png and psd
+        </p>
         <ul class="file-list"></ul>
         <button disabled class="generate-btn">Generate product mockups</button>
         <button style="display:none" class="start-mockup-btn"
