--- a/src/styles/upload.css
+++ b/src/styles/upload.css
@@ -85,6 +85,7 @@ main {
   width: 100%;
   border: 1px solid var(--gray-5);
   box-sizing: border-box;
+  background-color: white;
 }
 
 .upload__inner-box {
@@ -103,50 +104,41 @@ main {
   object-fit: contain;
 }
 
-.upload__background {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: rgba(0, 0, 0, 0.3);
-}
-
 .upload-guide {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+  background-color: rgba(0, 67, 224, 0.05);
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin: 15px;
-  padding: 50px;
-  color: var(--white);
+  margin: 12px 0 0 0;
+  padding: 24px 12px;
+  color: rgba(0, 67, 224, 1);
   text-align: center;
-  border: 2px dashed var(--white);
-  border-radius: 10px;
+  border: 2px dashed rgba(0, 67, 224, 1);
+  border-radius: 20px;
   box-sizing: border-box;
 }
 
 .upload-guide__title {
   font-weight: 700;
-  font-size: 24px;
+  font-size: 14px;
+  margin: 8px 0 0 0;
 }
 
 .upload-guide__hint {
-  font-size: 12px;
+  font-size: 10px;
+  font-weight: 400;
+  line-height: 12px;
+  color: #a4a4a4;
+  margin: 20px 0px 20px 0px;
 }
 
 .upload-guide__browse-btn {
-  padding: 8px 14px;
-  background: var(--white);
-  border-radius: 100px;
-  font-size: 14px;
-  font-weight: 700;
-  color: var(--black);
+  font-size: 12px;
+  font-weight: 400;
+  color: rgba(0, 67, 224, 1);
+  text-decoration: underline;
+  margin: 8px 0 0 0;
 }
 .upload-guide__browse-btn:hover {
   cursor: pointer;
@@ -194,8 +186,9 @@ main {
 }
 
 .file-uploaded {
+  /* position: relative; */
   margin: 20px 20px 0 20px;
-  padding: 20px 20px 15px 20px;
+  padding: 20px 20px 20px 20px;
   background: var(--white);
   border: 1px solid var(--gray-5);
   box-sizing: border-box;
@@ -231,16 +224,23 @@ main {
 
 .file-list {
   list-style: none;
-  margin-top: 20px;
+  margin: 0 0 0 0;
   padding: 0;
 }
 
 .file-list::after {
   content: "";
   display: block;
-  margin: 15px -20px 0 -20px;
+  margin: 0px -20px 0 -20px;
   width: calc(100% + 40px);
   border-bottom: 1px solid var(--gray-5);
+}
+
+.file-list-item:first-child {
+  margin-top: 20px;
+}
+.file-list-item:last-child {
+  margin-bottom: 20px;
 }
 
 .file-list-item {
@@ -345,7 +345,7 @@ main {
 }
 
 .generate-btn {
-  margin: 15px 0 0 0;
+  margin: 20px 0 0 0;
   padding: 8px 50px;
   width: 100%;
   background: var(--black);
