Update file upload hint copy writing

--- a/src/pages/device/[device].astro
+++ b/src/pages/device/[device].astro
@@ -128,7 +128,7 @@ const deviceDatail: Device = DEVICE_MANAGER.getDeviceById(targetDevice);
 
       <section class="device-info">
         <div class="device-support">
-          <h3 class="device-support__heading">THIS DEVICE SUPPORTS</h3>
+          <h3 class="device-support__heading">DEVICE ORIENTATIONS</h3>
           <ul class="device-support__orientation-list">
             {
               deviceDatail.imagePath?.map((path: string[]) => (
