--- a/src/styles/upload.css
+++ b/src/styles/upload.css
@@ -292,6 +292,7 @@ main {
   width: 20px;
   height: 20px;
   margin: 0 8px 0 0;
+  flex: none;
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
