--- a/src/styles/device.css
+++ b/src/styles/device.css
@@ -58,6 +58,9 @@
   background-repeat: no-repeat;
   background-position: center;
 }
+.device-type-list__circle-image-all::after {
+  background-image: url("/Images/types/all.svg");
+}
 .device-type-list__circle-image-phone::after {
   background-image: url("/Images/types/phone.svg");
 }
@@ -74,9 +77,26 @@
   background-image: url("/Images/types/tv.svg");
 }
 .device-type-list__circle-image--chosen {
-  background: var(--white);
-  border: 2px solid #1963ef;
+  background: #0043e0;
   box-shadow: 0px 6px 16px rgba(0, 0, 0, 0.16);
+}
+.device-type-list__circle-image-all--chosen::after {
+  background-image: url("/Images/types/all-white.svg");
+}
+.device-type-list__circle-image-phone--chosen::after {
+  background-image: url("/Images/types/phone-white.svg");
+}
+.device-type-list__circle-image-tablet--chosen::after {
+  background-image: url("/Images/types/tablet-white.svg");
+}
+.device-type-list__circle-image-wearables--chosen::after {
+  background-image: url("/Images/types/wearables-white.svg");
+}
+.device-type-list__circle-image-computer--chosen::after {
+  background-image: url("/Images/types/computer-white.svg");
+}
+.device-type-list__circle-image-tv--chosen::after {
+  background-image: url("/Images/types/tv-white.svg");
 }
 
 .device-type__name {
