Fix links in index page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,20 +19,19 @@ import { Image } from "@astrojs/image/components";
       <li class="quick-device-list__item quick-device-list__item-iphone">
         <a
           class="quick-device-list__link quick-device-list__link-iphone"
-          href="/type/ios#iphone14">iPhone 14</a
+          href="/device/apple-iphone14-blue">iPhone 14</a
         >
       </li>
       <li class="quick-device-list__item quick-device-list__item-googlepixel">
         <a
           class="quick-device-list__link quick-device-list__link-googlepixel"
-          href="/type/android#googlepixel">Google Pixel</a
+          href="/device/google-pixel5-justblack">Google Pixel</a
         >
       </li>
       <li class="quick-device-list__item quick-device-list__item-other">
         <a
           class="quick-device-list__link quick-device-list__link-other"
-          href="/type/computer#macbook"
-          >Other laptop, phones, tablets & wearables.</a
+          href="/type/laptop">Other laptop, phones, tablets & wearables.</a
         >
       </li>
     </ul>
